--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "args-js": "^0.10.4",
+    "coffee-script": "^1.7.1",
     "fs-extra": "^0.9.1",
     "lodash": "^2.4.1",
     "sails": "^0.10.0-rc9",
