--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "args-js": "^0.10.4",
     "coffee-script": "^1.7.1",
-    "fs-extra": "^0.9.1",
+    "fs-extra": "^0.10.0",
     "lodash": "^2.4.1",
     "sails": "^0.10.0-rc9",
     "socket.io": "~0.9.14",
@@ -18,8 +18,8 @@
     "wrench": "^1.5.8"
   },
   "devDependencies": {
-    "mocha": "^1.20.1",
-    "should": "^4.0.4"
+    "mocha": "*",
+    "should": "*"
   },
   "engines": {},
   "homepage": "",
