--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "coffee-script": "^1.7.1",
     "fs-extra": "^0.10.0",
     "lodash": "^2.4.1",
-    "sails": "^0.10.0-rc9",
-    "socket.io": "~0.9.14",
+    "sails": "git://github.com/sailorjs/sailorjs#sailor",
     "socket.io-client": "~0.9.16",
     "wrench": "^1.5.8"
   },
