refactor and fixed some things

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "args-js": "^0.10.4",
     "coffee-script": "^1.7.1",
+    "execSync": "^1.0.1-pre",
     "fs-extra": "^0.10.0",
     "lodash": "^2.4.1",
     "sails": "git://github.com/sailorjs/sailorjs#sailor",
