--- a/template/base/package.json
+++ b/template/base/package.json
@@ -12,7 +12,15 @@
     "rc": "~0.3.3",
     "include-all": "~0.1.3",
     "grunt": "0.4.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-sync": "~0.0.4",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-coffee": "~0.10.1"
     },
   "devDependencies": {
     "mocha": "*",
