--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "args-js": "^0.10.4",
-    "coffee-script": "^1.7.1",
+    "coffee-script": "*",
     "execSync": "^1.0.1-pre",
     "fs-extra": "^0.10.0",
     "lodash": "^2.4.1",
-    "sails": "git://github.com/sailorjs/sailorjs#sails",
+    "sails": "git://github.com/sailorjs/sails",
     "socket.io-client": "~0.9.16",
     "wrench": "^1.5.8"
   },
