--- a/template/base/package.json
+++ b/template/base/package.json
@@ -8,20 +8,21 @@
     "url": "https://github.com/Kikobeats"
   },
   "dependencies": {
-    "sails-disk": "~0.10.0",
-    "rc": "~0.3.3",
-    "include-all": "~0.1.3",
+    "express-validator": "^2.3.0",
     "grunt": "0.4.2",
-    "grunt-sync": "~0.0.4",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1"
-    },
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "rc": "~0.3.3",
+    "sails-disk": "~0.10.0"
+  },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
@@ -29,7 +30,7 @@
   "engines": {},
   "homepage": "",
   "keywords": [
-  "sailor"
+    "sailor"
   ],
   "license": "MIT",
   "main": "",
