--- a/template/base/package.json
+++ b/template/base/package.json
@@ -20,7 +20,8 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "rc": "~0.3.3",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "express-validator": "^2.3.0"
   },
   "devDependencies": {
     "mocha": "*",
