--- a/template/base/package.json
+++ b/template/base/package.json
@@ -5,20 +5,22 @@
   "author": "",
   "dependencies": {
     "express-validator": "*",
-    "grunt": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-less": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-sync": "*",
-    "grunt-translate-compile": "git://github.com/Kikobeats/translate-compile",
-    "include-all": "*",
-    "rc": "*",
-    "sails-disk": "*"
+    "sails-disk": "~0.10.0",
+    "rc": "~0.5.0",
+    "include-all": "~0.1.3",
+    "ejs": "~0.8.4",
+    "grunt": "0.4.2",
+    "grunt-sync": "~0.0.4",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-coffee": "~0.10.1"
   },
   "devDependencies": {
     "mocha": "*",
