fix packages in templates

--- a/template/base/package.json
+++ b/template/base/package.json
@@ -2,27 +2,26 @@
   "name": "sailor-base",
   "description": "A new sailor Proyect",
   "version": "0.0.0",
-  "author": "",
   "dependencies": {
-    "sailorjs": "git://github.com/sailorjs/sailorjs",
-    "jwt-simple": "*",
     "express-validator": "*",
-    "sails-disk": "*",
-    "rc": "*",
-    "include-all": "*",
     "grunt": "*",
-    "grunt-sync": "*",
-    "grunt-contrib-copy": "*",
     "grunt-contrib-clean": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-sails-linker": "*",
-    "grunt-contrib-jst": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-less": "*",
     "grunt-contrib-coffee": "*",
-    "grunt-translate-compile": "git://github.com/Kikobeats/translate-compile"
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-jst": "*",
+    "grunt-contrib-less": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-sails-linker": "*",
+    "grunt-sync": "*",
+    "grunt-translate-compile": "git://github.com/Kikobeats/translate-compile",
+    "include-all": "*",
+    "jwt-simple": "*",
+    "rc": "*",
+    "sailorjs": "git://github.com/sailorjs/sailorjs",
+    "sails-disk": "*"
   },
   "devDependencies": {
     "mocha": "*",
