--- a/template/base/package.json
+++ b/template/base/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sailor-base",
+  "name": "sailor",
   "description": "A new sailor Proyect",
   "version": "0.0.0",
   "dependencies": {
