--- a/template/base/app.json
+++ b/template/base/app.json
@@ -3,16 +3,16 @@
   "name"             : "sailor",
   "script"           : "app.js",
   "watch"            : true,
-  "ignoreWatch"      : ["node_modules", ".git", ".tmp", "assets", "views"],
+  "ignoreWatch"      : ["node_modules", ".git", ".tmp", "assets", "views", "logs", "app.json"],
   "env"              : {"NODE_ENV": "development"},
   "env_production"   : {"NODE_ENV": "production"},
   "node_args"        : "--harmony",
   "exec_interpreter" : "node",
   "exec_mode"        : "cluster_mode",
-  "output"           : "cwd/logs/out.log",
-  "error"            : "cwd/logs/error.log",
-  "pid"              : "cwd/logs/pid.log",
   "log_date_format"  : "YYYY-MM-DD HH:mm Z",
+  "pid_file"         : "./logs/app.pid",
+  "err_file"         : "./logs/error.log",
+  "out_file"         : "./logs/out.log",
   "merge_logs"       : true
   }],
   "deploy" : {
