--- a/template/base/package.json
+++ b/template/base/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "superagent": "*"
   },
   "engines": {},
   "homepage": "",
