--- a/template/module/package.json
+++ b/template/module/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/Kikobeats"
   },
   "dependencies": {
+    "coffee-script": "*",
     "sailor-errorify": "git://github.com/sailorjs/sailor-errorify",
     "sailor-translate": "git://github.com/sailorjs/sailor-translate",
     "sailor-validator": "git://github.com/sailorjs/sailor-validator"
@@ -20,7 +21,7 @@
     "should": "*",
     "superagent": "*",
     "sailor-scripts": "git://github.com/sailorjs/sailor-scripts",
-    "grunt-translate-compile": "git://github.com/Kikobeats/translate-compile"
+    "grunt-translate-compile": "git://github.com/sailorjs/translate-compile"
   },
   "engines": {},
   "homepage": "",
