--- a/template/module/package.json
+++ b/template/module/package.json
@@ -15,7 +15,7 @@
     "grunt-translate-compile": "git://github.com/sailorjs/translate-compile",
     "load-grunt-tasks": "*",
     "mocha": "*",
-    "sailor-scripts": "git://github.com/sailorjs/sailor-scripts",
+    "sailorjs": "git://github.com/sailorjs/sailorjs",
     "should": "*",
     "superagent": "*"
   },
