--- a/template/base/package.json
+++ b/template/base/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "superagent": "*"
+    "superagent": "*",
+    "async": "*"
   },
   "keywords": [
     "sailor"
