--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sailor-scripts",
   "description": "All scripts necessary for setup Sailor projects",
-  "version": "0.7.4b",
+  "version": "0.7.5",
   "author": {
     "name": "Kiko Beats",
     "email": "josefrancisco.verdu@gmail.com",
